[package]
name = "string_lib"
version = "0.1.0"
authors = ["balajisu"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]


[lib]
name = "InstallerRstaticLib"
#crate-type = ["cdylib"]      # Creates dynamic lib
crate-type = ["staticlib"] # Creates static lib

